# Android-Serialport-Example

./: readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/android_serialport_api/sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/android_serialport_api/sample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
